--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-palemoon (28.2019.04.24) UNRELEASED; urgency=medium
+newmoon (28.2019.04.24) UNRELEASED; urgency=medium
 
   [ rt1k ]
   * initial port based on wicknix PPC32 repository
