--- a/application/palemoon/branding/unofficial/locales/en-US/brand.dtd
+++ b/application/palemoon/branding/unofficial/locales/en-US/brand.dtd
@@ -4,5 +4,5 @@
 
 <!ENTITY  brandShortName        "New Moon">
 <!ENTITY  brandFullName         "New Moon">
-<!ENTITY  vendorShortName       "a community developer">
+<!ENTITY  vendorShortName       "PowerProgressCommunity.org">
 <!ENTITY  trademarkInfo.part1   " ">
