--- a/application/palemoon/locales/l10n.ini
+++ b/application/palemoon/locales/l10n.ini
@@ -4,13 +4,13 @@
 
 [general]
 depth = ../../..
-all = application/newmoon/locales/all-locales
+all = application/powermoon/locales/all-locales
 
 [compare]
-dirs = application/newmoon
+dirs = application/powermoon
      extensions/reporter
      other-licenses/branding/firefox
-     application/newmoon/branding/official
+     application/powermoon/branding/official
 
 [includes]
 # non-central apps might want to use %(topsrcdir)s here, or other vars
