--- a/application/palemoon/branding/unofficial/locales/en-US/brand.dtd
+++ b/application/palemoon/branding/unofficial/locales/en-US/brand.dtd
@@ -2,7 +2,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
-<!ENTITY  brandShortName        "New Moon">
-<!ENTITY  brandFullName         "New Moon">
-<!ENTITY  vendorShortName       "PowerProgressCommunity.org">
+<!ENTITY  brandShortName        "Power Moon">
+<!ENTITY  brandFullName         "Power Moon">
+<!ENTITY  vendorShortName       "Power Progress Community">
 <!ENTITY  trademarkInfo.part1   " ">
